tests/ui/auto_enum/rejected-by-rustc.stderr
error: expected `{`, found keyword `return`
 --> $DIR/rejected-by-rustc.rs:9:12
  |
9 |     } else return {
  |            ^^^^^^ expected `{`
help: try placing this code inside a block
  |
9 |     } else { return {
10|         //~^ ERROR expected `{`, found keyword `return`
11|         2..=10
12|     } }
  |

error: attributes are not yet allowed on `if` expressions
  --> $DIR/rejected-by-rustc.rs:20:9
   |
20 |         #[nested]
   |         ^^^^^^^^^
